[package]
name = "back_runner"
version = "1.0.0"
edition = "2021"

[dependencies]
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10"
libc = "0.2"
log = "0.4"
oslog = "0.2"

# Mac App Bundle configuration for the `cargo bundle` command
[package.metadata.bundle]
copyright = "Copyright (c) 2025 Ofer Affias"
icon = ["resources/rocket.icns"]
identifier = "com.1000ants.backrunner"
name = "BackRunner"
resources = ["resources/*.png"]

# [lints.rust]
# unexpected_cfgs = { level = "warn", check-cfg = ['cfg(cargo-clippy)'] }
